--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -124,7 +124,6 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
 }
 
 /* Ajout de CSS pour les boutons filtres */
@@ -137,7 +136,7 @@ li:hover {
 	margin-bottom: 50px;
 }
 
-.menu-filter button {
+button  {
 	color: #1D6154;
 	font-family: 'Syne';
 	font-weight: 700;
@@ -153,11 +152,13 @@ li:hover {
 	cursor: pointer;
 }
 
-.menu-filter .selected {
+.menu-filter .selected, .modal-wrapper button {
 	color: white;
 	background-color: #1D6154;
-
 }
+
+
+
 
 /* Fin filtres */ 
 
@@ -287,4 +288,225 @@ footer nav ul {
 }
 
 /* Fin  Formulaire */ 
+
+.menuAdminContainer {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 2em;
+}
+
+#lien-modifier {
+	/* display: none; */
+	color: #1D6154;
+	font-family: 'Syne';
+	font-weight: 700;	
+
+}
+
+
+/* Debut Modal */ 
+
+.modal {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+
+}
+
+.modal-wrapper { 
+
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 20px;
+
+	overflow: auto;
+	background-color: white;
+	width: 600px;
+	height: 750px;
+	border-radius: 20px;
+	max-width: calc(100vw - 50px);
+	max-height: calc(100vh - 50px);
+	padding: 20px;	
+}
+
+.modal-wrapper button {
+	width: 240px;
+}
+
+.iconContainer {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	
+}
+
+.fa-xmark, .fa-arrow-left {
+	margin: 15px;
+	font-size: 2em;
+	cursor: pointer;
+
+}
+
+.editableGalleryContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 75px;
+}
+
+.editableGalleryContainer #btn-add-photo {
+
+	cursor: pointer;
+}
+
+.editableGallery {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+	gap: 5px;
+	row-gap: 25px;
+	padding: 0px 80px;
+}
+
+.editableGallery img {
+	width: 80px;
+}
+
+.editableGallery figure {
+	position: relative;
+}
+
+.editableGallery i {
+	position: absolute;
+	top : 5px;
+	right: 5px;
+	color: white;
+	background-color: black;
+	padding: 3px;
+	cursor: pointer;
+}
+
+.addRealisation, .addRealisation form, .addRealisation .insertPhotoContainer, .addConfirmRealisation, .addConfirmRealisation form, .addConfirmRealisation .insertPhotoContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.addRealisation, .addConfirmRealisation {
+	gap: 40px;
+}
+
+.addRealisation form, .addConfirmRealisation form {
+
+	align-items: flex-start;
+}
+
+.addRealisation form .label, .addConfirmRealisation form .label {
+	margin-top: 30px;
+}
+
+.addRealisation form #image-title, .addRealisation form #image-categorie, .addConfirmRealisation form #image-title-confirm, .addConfirmRealisation form #image-categorie-confirm {
+
+	margin-top: 10px;
+	border: 0;
+	height: 50px;
+
+	box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2), -1px -1px 5px rgba(0, 0, 0, 0.2);
+	font-family: 'Syne';
+	font-weight: 700;
+	background-color: #FFF;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.addRealisation form #image-title, .addConfirmRealisation form #image-title-confirm {
+
+	width: 380px;
+
+}
+
+.addRealisation form #image-categorie, .addConfirmRealisation form #image-categorie-confirm {
+
+	width: 410px;
+	margin-bottom: 30px;
+}
+
+.addRealisation form button, .addConfirmRealisation form button {
+	width: 230px;
+	height: 35px;
+	border: 0;
+	cursor: pointer;
+	margin: auto;
+}
+
+
+.addRealisation .insertPhotoContainer, .addConfirmRealisation .insertPhotoContainer {
+
+	justify-content: flex-start;
+	background-color: #e8f1f6;
+	width: 410px;
+	height: 220px;
+	border-radius: 5px;
+	margin-bottom: 20px;
+	gap: 15px;
+}
+
+.insertPhotoContainer .fa-image {
+	margin-top: 15px;
+	font-size: 5em;
+	color: #b9c5cc;
+}
+
+.insertPhotoContainer .input-file {
+	width: 0px;
+}
+
+.insertPhotoContainer #btn-insert-file {
+	color: #1D6154;
+	font-family: 'Syne';
+	font-weight: 700;
+	background-color: #cbd6dc;
+	border-radius: 25px;
+	width: 170px;
+	height: 35px;
+	padding: 6px;
+	text-align: center;
+	cursor: pointer;
+}
+
+.insertPhotoContainer p {
+	font-size: 10px;
+}
+
+.insertPhotoContainer #fileName {
+	color: #1D6154;
+	font-family: 'Syne';
+	font-weight: 700;
+
+}
+
+.insertPhotoContainer span {
+	color: red;
+}
+
+.addConfirmRealisation #photo-preview {
+
+	/* width: 170px; */
+	height: 100%;
+}
 
