--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -48,18 +48,35 @@ table {
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
+	max-width: 100%;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 	background-color: #fffef8;
-}
-header {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+header {
+	max-width: 1140px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0;
+	gap: 200px;
+}
+
+main {
+	max-width: 1140px;
+}
+
+footer {
+	width: 100%;
 }
 section {
+
 	margin: 50px 0
 }
 
@@ -99,6 +116,28 @@ nav li {
 li:hover {
 	color: #B1663C;
 }
+
+/* Ajout de la banner black en top de page */
+
+#banner {
+	background-color: black;
+	color: white;
+	width: 100%;
+	height: 60px;
+	position: relative ;
+	top: 0;
+	right: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	font-size: 1.2em;
+}
+
+
+/* Fin Banner black */
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -538,3 +577,5 @@ hr {
 #buttonAddARealisation {
 	margin-top: 25px;
 }
+
+
